[infra] target 21, add Panama support